JythonCli.java - sync with main implementation